force-app/main/default/objects/SPEN_Numbers__c/SPEN_Numbers__c.object-meta.xml
<CustomObject>
    <description>SPEN Numbers object will be consisting of all the phone numbers being used in IVR for incoming calling.</description>
    <label>SPEN Numbers</label>
    <nameField>
        <label>SPEN Numbers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPEN Numbers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>