force-app/main/default/objects/SPEN_Numbers__c/fields/SPEN_Domain__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>