force-app/main/default/objects/SPEN_Numbers__c/fields/SPEN_Feature__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>