force-app/main/default/objects/SPEN_Numbers__c/fields/SPEN_IsActive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>