force-app/main/default/objects/SPEN_Numbers__c/fields/SPEN_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>